--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 	"author": "Carter Himmel <fyko@sycer.dev>",
 	"license": "MIT",
 	"dependencies": {
-		"@discordjs/builders": "github:fyko/djs-builders#build",
+		"@discordjs/builders": "^0.4.0",
+		"@discordjs/collection": "^0.2.1",
 		"@discordjs/rest": "^0.1.0-canary.0",
 		"@naval-base/ms": "^3.1.0",
 		"@prisma/client": "^2.28.0",
@@ -29,6 +30,7 @@
 		"discord-interactions": "^2.3.0",
 		"dotenv-cra": "^3.0.1",
 		"fastify": "^3.12.0",
+		"fs-nextra": "^0.5.1",
 		"pino": "^7.0.0-rc.2",
 		"prisma": "^2.28.0",
 		"reflect-metadata": "^0.1.13",
