chore: rename package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "giveaways",
+	"name": "giveaways-interactions",
 	"private": true,
 	"version": "2.2.0",
 	"description": "A feature dense Discord Giveaways bot 🎉",
